--- a/about.html
+++ b/about.html
@@ -392,85 +392,87 @@
             </div>
         </section>
 
-        <!-- start sevice -->
-        <section class="bg-[#fff] pt-[110px] pb-[40px]">
-            <div class="wraper">
-                <h2 class="text-[70px]  md:text-[45px] sm:text-[30px] mb-[50px] 
-            text-[#121127] font-bold base-font text-center">Services</h2>
-                <div class="grid grid-cols-12 gap-8 lg:gap-3">
+        <!-- start service -->
+        <section class="bg-white pt-20 pb-10">
+            <div class="container mx-auto px-4">
+                <h2 class="text-5xl md:text-4xl sm:text-3xl mb-12 text-gray-900 font-bold text-center"></h2>
+                <div class="grid grid-cols-12 gap-8 lg:gap-4">
                     <div class="col-span-6 md:col-span-12 sm:col-span-12">
-                        <div class="mb-[60px]">
-                            <div class="flex items-center justify-centert sm:block">
-                                <div class="mr-8 sm:mr-0 sm:mb-8 w-[200px] h-[184px] text-center leading-[184px]
-                            bg-[url('../images/wpo-service/shape.html')] bg-no-repeat bg-center">
-                                    <i class="text-[#181764] text-[60px] ml-[20px] fi flaticon-idea"></i>
+                        <div class="mb-12">
+                            <div class="flex items-center sm:block">
+                                <div class="mr-8 sm:mr-0 sm:mb-6 w-48 h-44 flex items-center justify-center bg-blue-50 rounded-xl">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-blue-900" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+                                    </svg>
                                 </div>
-                                <div class="max-w-[300px] lg:max-w-[200px] md:max-w-[500px] sm:max-w-full">
-                                    <h2 class="text-[#131058] text-[40px] mb-[20px] leading-[55px] font-bold">
-                                        Product
-                                        <br> Design</h2>
-                                    <p class="text-[#666] text-[15px]  leading-[30px]">consectetur adipiscing
-                                        elit,
-                                        eiusmod tempor incididunt labore.</p>
+                                <div>
+                                    <h2 class="text-blue-900 text-3xl mb-4 leading-tight font-bold">
+                                        AI Solution <br> Development
+                                    </h2>
+                                    <p class="text-gray-600 text-base leading-relaxed">
+                                        Custom machine learning models and AI integration for business process automation and intelligent decision-making.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-span-6 md:col-span-12 sm:col-span-12">
-                        <div class="mb-[60px]">
-                            <div class="flex items-center justify-centert sm:block">
-                                <div class="mr-8 sm:mr-0 sm:mb-8 w-[200px] h-[184px] text-center leading-[184px]
-                            bg-[url('../images/wpo-service/shape-2.html')] bg-no-repeat bg-center">
-                                    <i class="text-[#181764] text-[60px] ml-[20px] fi flaticon-files-and-folders"></i>
+                        <div class="mb-12">
+                            <div class="flex items-center sm:block">
+                                <div class="mr-8 sm:mr-0 sm:mb-6 w-48 h-44 flex items-center justify-center bg-blue-50 rounded-xl">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-blue-900" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+                                    </svg>
                                 </div>
-                                <div class="max-w-[300px] lg:max-w-[200px] md:max-w-[500px] sm:max-w-full">
-                                    <h2 class="text-[#131058] text-[40px] mb-[20px] leading-[55px] font-bold">
-                                        Web <br>
-                                        Design</h2>
-                                    <p class="text-[#666] text-[15px]  leading-[30px]">consectetur adipiscing
-                                        elit,
-                                        eiusmod tempor incididunt labore.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-span-6 md:col-span-12 sm:col-span-12">
-                        <div class="mb-[60px]">
-                            <div class="flex items-center justify-centert sm:block">
-                                <div class="mr-8 sm:mr-0 sm:mb-8 w-[200px] h-[184px] text-center leading-[184px]
-                            bg-[url('../images/wpo-service/shape-3.html')] bg-no-repeat bg-center">
-                                    <i class="text-[#181764] text-[60px] ml-[20px] fi flaticon-artist"></i>
-                                </div>
-                                <div class="max-w-[300px] lg:max-w-[200px] md:max-w-[500px] sm:max-w-full">
-                                    <h2 class="text-[#131058] text-[40px] mb-[20px] leading-[55px] font-bold">
-                                        Visual
-                                        <br> Design</h2>
-                                    <p class="text-[#666] text-[15px]  leading-[30px]">consectetur adipiscing
-                                        elit,
-                                        eiusmod tempor incididunt labore.</p>
+                                <div>
+                                    <h2 class="text-blue-900 text-3xl mb-4 leading-tight font-bold">
+                                        Full-Stack <br> Development
+                                    </h2>
+                                    <p class="text-gray-600 text-base leading-relaxed">
+                                        Modern web applications using React, Node.js, and cloud-native architecture for scalable performance.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-span-6 md:col-span-12 sm:col-span-12">
-                        <div class="mb-[60px]">
-                            <div class="flex items-center justify-centert sm:block">
-                                <div class="mr-8 sm:mr-0 sm:mb-8 w-[200px] h-[184px] text-center leading-[184px]
-                            bg-[url('../images/wpo-service/shape-4.html')] bg-no-repeat bg-center">
-                                    <i class="text-[#181764] text-[60px] ml-[20px] fi flaticon-man"></i>
+                        <div class="mb-12">
+                            <div class="flex items-center sm:block">
+                                <div class="mr-8 sm:mr-0 sm:mb-6 w-48 h-44 flex items-center justify-center bg-blue-50 rounded-xl">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-blue-900" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                                    </svg>
                                 </div>
-                                <div class="max-w-[300px] lg:max-w-[200px] md:max-w-[500px] sm:max-w-full">
-                                    <h2 class="text-[#131058] text-[40px] mb-[20px] leading-[55px] font-bold">
-                                        Business
-                                        <br> Strategy</h2>
-                                    <p class="text-[#666] text-[15px]  leading-[30px]">consectetur adipiscing
-                                        elit,
-                                        eiusmod tempor incididunt labore.</p>
+                                <div>
+                                    <h2 class="text-blue-900 text-3xl mb-4 leading-tight font-bold">
+                                        Mobile App <br> Development
+                                    </h2>
+                                    <p class="text-gray-600 text-base leading-relaxed">
+                                        Cross-platform mobile solutions using React Native and Flutter with seamless API integration.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-span-6 md:col-span-12 sm:col-span-12">
+                        <div class="mb-12">
+                            <div class="flex items-center sm:block">
+                                <div class="mr-8 sm:mr-0 sm:mb-6 w-48 h-44 flex items-center justify-center bg-blue-50 rounded-xl">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-blue-900" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                                    </svg>
+                                </div>
+                                <div>
+                                    <h2 class="text-blue-900 text-3xl mb-4 leading-tight font-bold">
+                                        Cybersecurity <br> Solutions
+                                    </h2>
+                                    <p class="text-gray-600 text-base leading-relaxed">
+                                        End-to-end security assessment and implementation with zero-trust architecture and compliance management.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
